tests/negative/test_decl_bad_type_cn.orb
fnc main() {
    let i32 x = 100;
    let i32 cn* a = &x;
    let i32* b = a;
}